--- a/package.json
+++ b/package.json
@@ -1,8 +1,21 @@
 {
+  "devDependencies": {
+    "html-webpack-plugin": "^3.2.0",
+    "node-sass": "^4.12.0",
+    "sass-loader": "^7.1.0",
+    "webpack": "^4.33.0",
+    "webpack-cli": "^3.3.3",
+    "webpack-dev-server": "^3.7.1"
+  },
   "name": "dotyk",
   "version": "1.0.0",
   "main": "index.js",
   "repository": "https://github.com/YuraYelisieiev/Dotyk",
   "author": "Yurii Yelisieiev <w1ckaero@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack",
+    "start": "webpack -watch & serve "
+  }
 }
